--- a/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
+++ b/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: capstone-project-app
-          image: felixlutze/capstone-project
+          image: vijis/capstone-project
           ports:
             - containerPort: 80
