--- a/cloudformation/network.yml
+++ b/cloudformation/network.yml
@@ -1,6 +1,6 @@
 ---
 Description: >
-  Felix Lutze / Capstone Project
+  vijis / Capstone Project
   Creates a VPC with public subnets for EKS.
 
 Parameters:
