--- a/cloudformation/cluster.yml
+++ b/cloudformation/cluster.yml
@@ -1,5 +1,5 @@
 Description: >
-  Felix Lutze / Capstone Project
+  vijis / Capstone Project
   Creates an Amazon EKS Cluster
 Parameters:
   EnvironmentName:
