--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "d4:2f:91:66:b5:0d:84:24:4a:09:2c:d6:8a:c1:0f:91"
+            - "b6:52:3e:2e:47:6c:2a:64:c2:11:91:a0:f1:a8:cf:a8"
       - attach_workspace:
           at: ~/
       - run:
@@ -234,17 +234,17 @@ workflows:
           filters:
             branches:
               only: [ master ]
-      - deploy-infrastructure:
-          filters:
-            branches:
-              only: [ master ]
-      - configure-infrastructure:
-          requires:
-            - deploy-infrastructure
-      - configure-cluster:
-          requires:
-            - configure-infrastructure
-            - upload-docker
-      - deploy-docker:
-          requires:
-            - configure-cluster
+#       - deploy-infrastructure:
+#           filters:
+#             branches:
+#               only: [ master ]
+#       - configure-infrastructure:
+#           requires:
+#             - deploy-infrastructure
+#       - configure-cluster:
+#           requires:
+#             - configure-infrastructure
+#             - upload-docker
+#       - deploy-docker:
+#           requires:
+#             - configure-cluster
