--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,10 +233,10 @@ workflows:
           filters:
             branches:
               only: [ master ]
-#       - deploy-infrastructure:
-#           filters:
-#             branches:
-#               only: [ master ]
+      - deploy-infrastructure:
+          filters:
+            branches:
+              only: [ master ]
 #       - configure-infrastructure:
 #           requires:
 #             - deploy-infrastructure
