--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,23 +227,23 @@ jobs:
 workflows:
   default:
     jobs:
-      - test-build
-      - upload-docker:
-          requires:
-            - test-build
-          filters:
-            branches:
-              only: [ master ]
-      - deploy-infrastructure:
-          filters:
-            branches:
-              only: [ master ]
-#       - configure-infrastructure:
+#       - test-build
+#       - upload-docker:
+#           requires:
+#             - test-build
+#           filters:
+#             branches:
+#               only: [ master ]
+#       - deploy-infrastructure:
+#           filters:
+#             branches:
+#               only: [ master ]
+      - configure-infrastructure:
 #           requires:
 #             - deploy-infrastructure
-#       - configure-cluster:
-#           requires:
-#             - configure-infrastructure
+      - configure-cluster:
+          requires:
+            - configure-infrastructure
 #             - upload-docker
 #       - deploy-docker:
 #           requires:
