--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,7 +238,7 @@ workflows:
 #           filters:
 #             branches:
 #               only: [ master ]
-      - configure-infrastructure:
+      - configure-infrastructure
 #           requires:
 #             - deploy-infrastructure
       - configure-cluster:
