--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -13,6 +13,7 @@
         chdir: $HOME
 
     - name: Check if deployment ist successful
+      no_output_timeout: 12m
       shell: "./bin/kubectl rollout status deployments/{{ ENVIRONMENT_NAME }}-deployment"
       args:
         chdir: $HOME
