--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -14,6 +14,6 @@
 
     - name: Check if deployment ist successful
       shell: "./bin/kubectl rollout status deployments/{{ ENVIRONMENT_NAME }}-deployment"
-      no_output_timeou: 12m
+      no_output_timeout: 12m
       args:
         chdir: $HOME
