--- a/ansible/roles/capstone-service/tasks/main.yml
+++ b/ansible/roles/capstone-service/tasks/main.yml
@@ -4,6 +4,6 @@
     dest: $HOME
 
 - name: Create service configuration
-  command: "./bin/kubectl apply -f {{ ENVIRONMENT_NAME }}-service.yaml"
+  command: "~/bin/kubectl apply -f {{ ENVIRONMENT_NAME }}-service.yaml"
   args:
     chdir: $HOME
