--- a/ansible/roles/capstone-deployment/tasks/main.yml
+++ b/ansible/roles/capstone-deployment/tasks/main.yml
@@ -4,6 +4,6 @@
     dest: $HOME
 
 - name: Apply deployment configuration
-  shell: "./bin/kubectl apply -f {{ ENVIRONMENT_NAME }}-deployment.yaml"
+  shell: "~/bin/kubectl apply -f {{ ENVIRONMENT_NAME }}-deployment.yaml"
   args:
     chdir: $HOME
