--- a/ansible/save-elb-dns.yml
+++ b/ansible/save-elb-dns.yml
@@ -8,7 +8,7 @@
     ENVIRONMENT_NAME: "{{ lookup('env', 'ENVIRONMENT_NAME') }}"
   tasks:
     - name: Get the LoadBalancer's DNS name
-      shell: "./bin/kubectl get svc {{ ENVIRONMENT_NAME }}-service"
+      shell: "~/bin/kubectl get svc {{ ENVIRONMENT_NAME }}-service"
       register: elb_dns
       args:
         chdir: $HOME
