updated yml files

--- a/ansible/save-elb-dns.yml
+++ b/ansible/save-elb-dns.yml
@@ -8,7 +8,7 @@
     ENVIRONMENT_NAME: "{{ lookup('env', 'ENVIRONMENT_NAME') }}"
   tasks:
     - name: Get the LoadBalancer's DNS name
-      shell: "~/bin/kubectl get svc {{ ENVIRONMENT_NAME }}-service"
+      shell: "./bin/kubectl get svc {{ ENVIRONMENT_NAME }}-service"
       register: elb_dns
       args:
         chdir: $HOME
@@ -16,7 +16,7 @@
     - name: Copy the output to a local file
       copy:
         content: "{{ elb_dns.stdout }}"
-        dest: "~/bin/elb_dns.txt"
+        dest: "~/elb_dns.txt"
       delegate_to: localhost
       args:
         chdir: $HOME
