--- a/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
+++ b/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
@@ -19,3 +19,4 @@ spec:
           image: vijis/capstone-project
           ports:
             - containerPort: 80
+            imagePullPolicy: Always
