--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,7 +221,7 @@ jobs:
           command: |
             cat ~/inventory.txt
             cd ansible
-            ansible-playbook -i ~/inventory.txt deploy-app.yml
+            # ansible-playbook -i ~/inventory.txt deploy-app.yml
           no_output_timeout: 24m
 
 workflows:
