--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -8,21 +8,21 @@
     CIRCLE_WORKFLOW_ID: "{{ lookup('env', 'CIRCLE_WORKFLOW_ID') }}"
   tasks:
     - name: Update the deployment to run the latest Build
-      shell: "~/bin/kubectl set image deployments/{{ ENVIRONMENT_NAME }}-deployment {{ ENVIRONMENT_NAME }}-app=vijis/{{ ENVIRONMENT_NAME }}:{{ CIRCLE_WORKFLOW_ID }}"
+      shell: "./bin/kubectl set image deployments/{{ ENVIRONMENT_NAME }}-deployment {{ ENVIRONMENT_NAME }}-app=vijis/{{ ENVIRONMENT_NAME }}:{{ CIRCLE_WORKFLOW_ID }}"
       args:
         chdir: $HOME
     
     - name: check deplyment status 
-      shell: "~/bin/kubectl get deployments"
+      shell: "./bin/kubectl get deployments"
       args:
         chdir: $HOME
         
     - name: check deplyment status 
-      shell: "~/bin/kubectl get services"
+      shell: "./bin/kubectl get services"
       args:
         chdir: $HOME    
 
     - name: Check if deployment ist successful
-      shell: "~/bin/kubectl rollout status deployments/{{ ENVIRONMENT_NAME }}-deployment"
+      shell: "./bin/kubectl rollout status deployments/{{ ENVIRONMENT_NAME }}-deployment"
       args:
         chdir: $HOME
