readiness probe added

--- a/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
+++ b/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
@@ -19,4 +19,8 @@ spec:
           image: vijis/capstone-project
           ports:
             - containerPort: 80
-            imagePullPolicy: Always
+          readinessProbe:
+            httpGet:
+              path: /
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
