--- a/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
+++ b/ansible/roles/capstone-deployment/files/capstone-project-deployment.yaml
@@ -22,5 +22,6 @@ spec:
           readinessProbe:
             httpGet:
               path: /
+              port: 80
             initialDelaySeconds: 10
             timeoutSeconds: 5
